--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch db.json --port 8080"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.0",
@@ -15,6 +16,7 @@
     "@emotion/styled": "^11.10.8",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.4",
+    "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
